--- a/notebooks/ZINC-FL_space.ipynb
+++ b/notebooks/ZINC-FL_space.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "<a id='references'>\n",
     "## References\n",
-    "</a>\n",
+    "</a><br>\n",
     "[1] Irwin, J.J., Sterling, T., Mysinger, M.M., Bolstad, E.S., Coleman, R.G. -- Zinc: A Free Tool to Discover Chemistry for Biology, _J. Chem. Inf. Model._, __2012__, 52, 1757-1768 <br>\n",
     "[2] Zinc Database can be found at: [Zinc](http://zinc.docking.org) <br>\n",
     "[3] Ruddigkeit, L., Awale, M., Reymond, J., Expanding the fragrance chemical space for virtual screening, _Journal of Cheminformatics_, __2014__, 6 <br>\n",
@@ -43,7 +43,8 @@
     "[5] Rogers, D., Hahn, M.: Extended Connectivity Fingerprints, _J. Chem. Inf. Model_, __2010__, 50, 742-752 <br>\n",
     "[6] Wildman, S.A., Crippen, G.M.: Prediction of Physicochemical Parameters by Atomic Contributions, _J. Chem. Inf. Comput. Sci._, __1999__ 35, 868-873<br>\n",
     "[7] Bertz, S.: The first general index of molecular complexity, _J. Am. Chem. Soc._, __1981__, 103, 3599-3601 <br>\n",
-    "[8] Landrum, G.: [RDKit: Open-Source Cheminformatics](http://rdkit.org) <br>"
+    "[8] Landrum, G.: [RDKit: Open-Source Cheminformatics](http://rdkit.org) <br>\n",
+    "[9] Baldi, P., Nasr, R.: When is Chemical Similarity Significant?..., _J. Chem. Inf. Model._, __2011__, 50, 1205-1222 <br>"
    ]
   },
   {
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -221,6 +222,66 @@
     "    tooltips.append(img_tag)\n",
     "    progressbar.value += 1\n",
     "tooltips = np.array(tooltips)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distribution of Tanimoto distances\n",
+    "\n",
+    "When using the DBScan algorithm, the parameter `eps` defines the maximum distance between two samples for them to be considered as in the same neighborhood. If this parameter is set too high, the consequence for the mapper algorithm is that each patch within the cover is one cluster. Therefore, it is useful to know the distribution of the Tanimoto distance between molecules, to choose a sensible value for `eps`.\n",
+    "\n",
+    "For this dataset, it is impractical to calculate the pairwise distance for all pairs of molecules. Therefore, we will select a molecule at random, and compute its distance to all other molecules in the set. We will do this several times, and spot patterns.\n",
+    "\n",
+    "In general, a good article discussing this can be found in [[9](#references)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "from sklearn.metrics.pairwise import pairwise_distances\n",
+    "import warnings\n",
+    "warnings.filterwarnings(action='ignore')\n",
+    "\n",
+    "n_samples = 30\n",
+    "\n",
+    "molecule_indices = np.arange(n_molecules)\n",
+    "\n",
+    "# Plotting objects\n",
+    "hist = plt.figure()\n",
+    "histax = hist.add_subplot(111)\n",
+    "cumsum = plt.figure()\n",
+    "cumsumax = cumsum.add_subplot(111)\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "for sample_n in range(n_samples):\n",
+    "    choice_molecule = np.random.choice(molecule_indices)\n",
+    "    mask = np.ones(n_molecules, dtype=bool)\n",
+    "    mask[choice_molecule] = False\n",
+    "    distances = pairwise_distances(fp_arr[choice_molecule].reshape(1,-1), fp_arr[mask], metric='jaccard')\n",
+    "    histvals = histax.hist(distances.flatten(), bins=100, normed=False, alpha=0.5)\n",
+    "    \n",
+    "    cumsumvals = histvals[0].cumsum()\n",
+    "    cumsumax.plot(histvals[1][1:],cumsumvals, alpha=0.5)\n",
+    "\n",
+    "n_nearest_cutoff = 100\n",
+    "cumsumax.set_ylim([0,n_nearest_cutoff])\n",
+    "cumsumax.set_xlabel('Tanimoto Distance')\n",
+    "cumsumax.set_ylabel('Number of Molecules less than Distance')\n",
+    "# cumsumax.legend(labels=np.arange(1,sample_n+1, dtype=int))\n",
+    "histax.set_xlabel('Tanimoto Distance')\n",
+    "histax.set_ylabel('Number of Molecules')\n",
+    "plt.show()"
    ]
   },
   {
