--- a/notebooks/ZINC-FL_space.ipynb
+++ b/notebooks/ZINC-FL_space.ipynb
@@ -457,13 +457,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualisation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from km.jupyter import Di"
+   ]
   }
  ],
  "metadata": {
