--- a/notebooks/ZINC-FL_space.ipynb
+++ b/notebooks/ZINC-FL_space.ipynb
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -403,7 +403,7 @@
       "\n",
       "Creating 900 hypercubes.\n",
       "\n",
-      "Created 3561 edges and 1351 nodes in 0:00:24.198404.\n",
+      "Created 3561 edges and 1351 nodes in 0:00:24.770435.\n",
       "Wrote visualization to: networks/ZINC-FL_space/network.html\n"
      ]
     }
@@ -450,6 +450,7 @@
     "#                      custom_meta={'Color': color_var})\n",
     "\n",
     "_ = mapper.visualize(network,\n",
+    "                 title='ZINC.FL: Mapper Network',\n",
     "                 color_function=desc_arr[:,1],\n",
     "                 path_html='networks/ZINC-FL_space/network.html',\n",
     "                 custom_tooltips = tooltips,\n",
@@ -465,14 +466,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=networks/ZINC-FL_space/network.html width=100%% height=800 frameBorder=\"0\"></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from kmapper.jupyter import display\n",
+    "\n",
+    "display(path_html='networks/ZINC-FL_space/network.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "from km.jupyter import Di"
-   ]
+   "source": []
   }
  ],
  "metadata": {
