--- a/notebooks/ZINC-FL_space.ipynb
+++ b/notebooks/ZINC-FL_space.ipynb
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -403,7 +403,7 @@
       "\n",
       "Creating 900 hypercubes.\n",
       "\n",
-      "Created 3561 edges and 1351 nodes in 0:00:24.770435.\n",
+      "Created 3561 edges and 1351 nodes in 0:00:24.537011.\n",
       "Wrote visualization to: networks/ZINC-FL_space/network.html\n"
      ]
     }
@@ -421,9 +421,6 @@
     "eps = 0.65\n",
     "min_samples = 4\n",
     "\n",
-    "eps = 0.65 # Too high and you basically are just creating a network representation of the lens projection\n",
-    "          # too low and you find most points are isolated\n",
-    "min_samples = 4 # This should be set low *enough* such that we actually get clusters with DBSCAN\n",
     "metric = 'jaccard'\n",
     "clusterer = DBSCAN(metric=metric, eps=eps, min_samples=min_samples, n_jobs=1)\n",
     "\n",
@@ -439,29 +436,24 @@
     "                     cover=cover,\n",
     "                     precomputed=False)\n",
     "\n",
-    "### Network Visualisation\n",
-    "# for count, color_var in enumerate(desc_names):\n",
-    "#     print(color_var)\n",
-    "#     color_function = desc_arr[:,count]\n",
-    "#     _ = mapper.visualize(network,\n",
-    "#                      color_function=color_function,\n",
-    "#                      path_html='networks/ZINC_FL/full_set/descriptor_colors/%s.html' % color_var,\n",
-    "#                      custom_tooltips = np.array(color_function),\n",
-    "#                      custom_meta={'Color': color_var})\n",
+    "# Make a color function where it is colored by the number of atoms in the molecule\n",
+    "c_f = desc_arr[:,0]\n",
     "\n",
     "_ = mapper.visualize(network,\n",
     "                 title='ZINC.FL: Mapper Network',\n",
-    "                 color_function=desc_arr[:,1],\n",
+    "                 color_function=c_f,\n",
     "                 path_html='networks/ZINC-FL_space/network.html',\n",
     "                 custom_tooltips = tooltips,\n",
-    "                 custom_meta={'Color': 'Number of Rings'})\n"
+    "                 custom_meta={'Color': 'Number of Atoms'})\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualisation"
+    "## Visualisation\n",
+    "\n",
+    "> This works best when using the notebook in Chrome. It does not work for GitHub's notebook viewer."
    ]
   },
   {
