--- a/notebooks/ZINC-FL_space.ipynb
+++ b/notebooks/ZINC-FL_space.ipynb
@@ -461,7 +461,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualisation"
+    "## Visualisation\n",
+    "\n",
+    "> Note that this only really works when viewing the notebook in Chrome."
    ]
   },
   {
