--- a/notebooks/MMP12_failure-modes.ipynb
+++ b/notebooks/MMP12_failure-modes.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -360,9 +360,9 @@
       "KeplerMapper()\n",
       "Mapping on data shaped (1880, 512) using lens shaped (1880, 4)\n",
       "\n",
-      "Creating 500 hypercubes.\n",
+      "Creating 160 hypercubes.\n",
       "\n",
-      "Created 214 edges and 157 nodes in 0:00:00.782845.\n",
+      "Created 126 edges and 121 nodes in 0:00:00.510868.\n",
       "Wrote visualization to: ./networks/MMP12/fifa_network.html\n"
      ]
     }
@@ -372,7 +372,7 @@
     "from sklearn.cluster import DBSCAN\n",
     "\n",
     "#### MAPPER HYPERPARAMETERS\n",
-    "n_cubes = [10,5,5,2]\n",
+    "n_cubes = [20,2,2,2]\n",
     "perc_overlap = 0.2\n",
     "cover = km.cover.Cover(n_cubes, perc_overlap)\n",
     "\n",
@@ -401,6 +401,15 @@
     "                 custom_tooltips = tooltips,\n",
     "                 custom_meta={'Color': 'Probability of predicting the correct class'})\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
