--- a/notebooks/MMP12_failure-modes.ipynb
+++ b/notebooks/MMP12_failure-modes.ipynb
@@ -403,6 +403,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mapper LiFa Lens\n",
+    "\n",
+    "### Creation of Lens\n",
+    "\n",
+    "$f(x) = (MDS_1, MDS_2, c_{true}, c_{pred})$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "lifa_lens = np.zeros((n_molecules, 4))\n",
+    "\n",
+    "lifa_lens[:,0] = mds_coords[:,0]\n",
+    "lifa_lens[:,1] = mds_coords[:,1]\n",
+    "lifa_lens[:,2] = MMP12_success['active']\n",
+    "lifa_lens[:,3] = pred_class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KeplerMapper()\n",
+      "Mapping on data shaped (1880, 512) using lens shaped (1880, 4)\n",
+      "\n",
+      "Creating 1600 hypercubes.\n",
+      "\n",
+      "Created 124 edges and 194 nodes in 0:00:00.881299.\n",
+      "Wrote visualization to: ./networks/MMP12/lifa_network.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "import kmapper as km\n",
+    "from sklearn.cluster import DBSCAN\n",
+    "\n",
+    "#### MAPPER HYPERPARAMETERS\n",
+    "n_cubes = [20,20,2,2]\n",
+    "perc_overlap = 0.2\n",
+    "cover = km.cover.Cover(n_cubes, perc_overlap)\n",
+    "\n",
+    "eps = 0.4 # Too high and you basically are just creating a network representation of the lens projection\n",
+    "          # too low and you find most points are isolated\n",
+    "min_samples = 2 # This should be set low *enough* such that we actually get clusters with DBSCAN\n",
+    "metric = 'jaccard'\n",
+    "clusterer = DBSCAN(metric=metric, eps=eps, min_samples=min_samples, n_jobs=1)\n",
+    "\n",
+    "### RANDOM SEED - useful for stochastic clustering method\n",
+    "random_seed = 42\n",
+    "np.random.seed(random_seed)\n",
+    "\n",
+    "### MAPPER\n",
+    "mapper = km.KeplerMapper(verbose=1)\n",
+    "network = mapper.map(lens=fifa_lens,\n",
+    "                     X=fp_arr,\n",
+    "                     clusterer=clusterer,\n",
+    "                     cover=cover,\n",
+    "                     precomputed=False)\n",
+    "### VISUALISATION\n",
+    "_ = mapper.visualize(network,\n",
+    "                 title='MMP12: LiFa lens',\n",
+    "                 color_function=fifa_lens[:,2],\n",
+    "                 path_html='./networks/MMP12/lifa_network.html',\n",
+    "                 custom_tooltips = tooltips,\n",
+    "                 custom_meta={'Color': 'Probability of predicting the correct class'})\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
