--- a/notebooks/ECFP-FCFP-top_comparison.ipynb
+++ b/notebooks/ECFP-FCFP-top_comparison.ipynb
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -465,7 +465,17 @@
       "KeplerMapper()\n",
       "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
       "\n",
-      "Creating 900 hypercubes.\n"
+      "Creating 900 hypercubes.\n",
+      "\n",
+      "Created 4081 edges and 1566 nodes in 0:00:24.397359.\n",
+      "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/FCFP_network.html\n",
+      "KeplerMapper()\n",
+      "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
+      "\n",
+      "Creating 900 hypercubes.\n",
+      "\n",
+      "Created 1944 edges and 1938 nodes in 0:00:23.613138.\n",
+      "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/top_network.html\n"
      ]
     }
    ],
