Alter colouring to presence of rather than n_ring

--- a/notebooks/ECFP-FCFP-top_comparison.ipynb
+++ b/notebooks/ECFP-FCFP-top_comparison.ipynb
@@ -424,15 +424,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "hyperparams = [{'Name': 'ECFP', 'fp_arr': ECFP_arr, 'lens': pca_lens(ECFP_arr, plot=False), 'cluster_params': {'eps': 0.65, 'min_samples': 4}},\n",
-    "               {'Name': 'FCFP', 'fp_arr': FCFP_arr, 'lens': pca_lens(FCFP_arr, plot=False), 'cluster_params': {'eps': 0.50, 'min_samples': 4}},\n",
-    "               {'Name': 'top', 'fp_arr': top_arr, 'lens': pca_lens(top_arr, plot=False), 'cluster_params': {'eps': 0.20, 'min_samples': 4}}]"
+    "hyperparams = [{'Name': 'ECFP', 'fp_arr': ECFP_arr, 'lens': pca_lens(ECFP_arr, plot=False), \n",
+    "                'cluster_params': {'eps': 0.65, 'min_samples': 4}},\n",
+    "               {'Name': 'FCFP', 'fp_arr': FCFP_arr, 'lens': pca_lens(FCFP_arr, plot=False), \n",
+    "                'cluster_params': {'eps': 0.50, 'min_samples': 2}},\n",
+    "               {'Name': 'top', 'fp_arr': top_arr, 'lens': pca_lens(top_arr, plot=False), '\n",
+    "                cluster_params': {'eps': 0.20, 'min_samples': 2}}]"
    ]
   },
   {
@@ -446,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -460,21 +463,21 @@
       "\n",
       "Creating 900 hypercubes.\n",
       "\n",
-      "Created 3560 edges and 1351 nodes in 0:00:23.348620.\n",
+      "Created 3561 edges and 1351 nodes in 0:00:23.264004.\n",
       "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/ECFP_network.html\n",
       "KeplerMapper()\n",
       "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
       "\n",
       "Creating 900 hypercubes.\n",
       "\n",
-      "Created 4081 edges and 1566 nodes in 0:00:24.397359.\n",
+      "Created 6184 edges and 2924 nodes in 0:00:28.509042.\n",
       "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/FCFP_network.html\n",
       "KeplerMapper()\n",
       "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
       "\n",
       "Creating 900 hypercubes.\n",
       "\n",
-      "Created 1944 edges and 1938 nodes in 0:00:23.613138.\n",
+      "Created 3353 edges and 3461 nodes in 0:00:28.798809.\n",
       "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/top_network.html\n"
      ]
     }
@@ -515,10 +518,10 @@
     "    ### VISUALISATION\n",
     "    _ = mapper.visualize(network,\n",
     "                     title='ZINC.FL: %s fingerprint' % name,\n",
-    "                     color_function=desc_arr[:,1],\n",
+    "                     color_function=desc_arr[:,1]>0,\n",
     "                     path_html='./networks/ZINC-FL_space/fingerprint_spaces/%s_network.html' % name,\n",
     "                     custom_tooltips = tooltips,\n",
-    "                     custom_meta={'Color': 'Number of Rings'})\n"
+    "                     custom_meta={'Color': 'Presence of Rings'})\n"
    ]
   },
   {
