update mapper hyperparams

--- a/notebooks/ECFP-FCFP-top_comparison.ipynb
+++ b/notebooks/ECFP-FCFP-top_comparison.ipynb
@@ -424,18 +424,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "hyperparams = [{'Name': 'ECFP', 'fp_arr': ECFP_arr, 'lens': pca_lens(ECFP_arr, plot=False), \n",
-    "                'cluster_params': {'eps': 0.65, 'min_samples': 4}},\n",
+    "                'cluster_params': {'eps': 0.65, 'min_samples': 4}, 'n_cubes': [30,30]},\n",
     "               {'Name': 'FCFP', 'fp_arr': FCFP_arr, 'lens': pca_lens(FCFP_arr, plot=False), \n",
-    "                'cluster_params': {'eps': 0.50, 'min_samples': 2}},\n",
-    "               {'Name': 'top', 'fp_arr': top_arr, 'lens': pca_lens(top_arr, plot=False), '\n",
-    "                cluster_params': {'eps': 0.20, 'min_samples': 2}}]"
+    "                'cluster_params': {'eps': 0.50, 'min_samples': 2}, 'n_cubes': [10,10]},\n",
+    "               {'Name': 'top', 'fp_arr': top_arr, 'lens': pca_lens(top_arr, plot=False),\n",
+    "                'cluster_params': {'eps': 0.20, 'min_samples': 2}, 'n_cubes': [5,5]}]"
    ]
   },
   {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -461,24 +461,7 @@
       "KeplerMapper()\n",
       "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
       "\n",
-      "Creating 900 hypercubes.\n",
-      "\n",
-      "Created 3561 edges and 1351 nodes in 0:00:23.264004.\n",
-      "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/ECFP_network.html\n",
-      "KeplerMapper()\n",
-      "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
-      "\n",
-      "Creating 900 hypercubes.\n",
-      "\n",
-      "Created 6184 edges and 2924 nodes in 0:00:28.509042.\n",
-      "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/FCFP_network.html\n",
-      "KeplerMapper()\n",
-      "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
-      "\n",
-      "Creating 900 hypercubes.\n",
-      "\n",
-      "Created 3353 edges and 3461 nodes in 0:00:28.798809.\n",
-      "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/top_network.html\n"
+      "Creating 900 hypercubes.\n"
      ]
     }
    ],
