fix typo when reading n_cubes

--- a/notebooks/ECFP-FCFP-top_comparison.ipynb
+++ b/notebooks/ECFP-FCFP-top_comparison.ipynb
@@ -470,13 +470,13 @@
     "from sklearn.cluster import DBSCAN\n",
     "\n",
     "#### MAPPER HYPERPARAMETERS\n",
-    "n_cubes = [30,30]\n",
     "perc_overlap = 0.4\n",
     "cover = km.cover.Cover(n_cubes, perc_overlap)\n",
     "\n",
     "\n",
     "for mapper_params in hyperparams:\n",
     "    ### Extract mapper_params\n",
+    "    n_cubes = mapper_params['n_cubes']\n",
     "    eps = mapper_params['cluster_params']['eps']\n",
     "    min_samples = mapper_params['cluster_params']['min_samples']\n",
     "    \n",
