update n_cubes to consistently [10,10]

--- a/notebooks/ECFP-FCFP-top_comparison.ipynb
+++ b/notebooks/ECFP-FCFP-top_comparison.ipynb
@@ -424,18 +424,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "hyperparams = [{'Name': 'ECFP', 'fp_arr': ECFP_arr, 'lens': pca_lens(ECFP_arr, plot=False), \n",
-    "                'cluster_params': {'eps': 0.65, 'min_samples': 4}, 'n_cubes': [30,30]},\n",
+    "                'cluster_params': {'eps': 0.65, 'min_samples': 4}, 'n_cubes': [10,10]},\n",
     "               {'Name': 'FCFP', 'fp_arr': FCFP_arr, 'lens': pca_lens(FCFP_arr, plot=False), \n",
     "                'cluster_params': {'eps': 0.50, 'min_samples': 2}, 'n_cubes': [10,10]},\n",
     "               {'Name': 'top', 'fp_arr': top_arr, 'lens': pca_lens(top_arr, plot=False),\n",
-    "                'cluster_params': {'eps': 0.20, 'min_samples': 2}, 'n_cubes': [5,5]}]"
+    "                'cluster_params': {'eps': 0.20, 'min_samples': 2}, 'n_cubes': [10,10]}]"
    ]
   },
   {
@@ -458,10 +458,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ECFP [10, 10] 0.65 4\n",
       "KeplerMapper()\n",
       "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
       "\n",
-      "Creating 900 hypercubes.\n"
+      "Creating 100 hypercubes.\n"
      ]
     }
    ],
@@ -471,7 +472,6 @@
     "\n",
     "#### MAPPER HYPERPARAMETERS\n",
     "perc_overlap = 0.4\n",
-    "cover = km.cover.Cover(n_cubes, perc_overlap)\n",
     "\n",
     "\n",
     "for mapper_params in hyperparams:\n",
@@ -483,6 +483,9 @@
     "    fp_arr = mapper_params['fp_arr']\n",
     "    lens = mapper_params['lens']\n",
     "    name = mapper_params['Name']\n",
+    "    cover = km.cover.Cover(n_cubes, perc_overlap)\n",
+    "    \n",
+    "    print(name, n_cubes, eps, min_samples)\n",
     "    \n",
     "    metric = 'jaccard'\n",
     "    clusterer = DBSCAN(metric=metric, eps=eps, min_samples=min_samples, n_jobs=1)\n",
