--- a/notebooks/ECFP-FCFP-top_comparison.ipynb
+++ b/notebooks/ECFP-FCFP-top_comparison.ipynb
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -433,7 +433,7 @@
     "hyperparams = [{'Name': 'ECFP', 'fp_arr': ECFP_arr, 'lens': pca_lens(ECFP_arr, plot=False), \n",
     "                'cluster_params': {'eps': 0.65, 'min_samples': 4}, 'n_cubes': [10,10]},\n",
     "               {'Name': 'FCFP', 'fp_arr': FCFP_arr, 'lens': pca_lens(FCFP_arr, plot=False), \n",
-    "                'cluster_params': {'eps': 0.50, 'min_samples': 2}, 'n_cubes': [10,10]},\n",
+    "                'cluster_params': {'eps': 0.40, 'min_samples': 2}, 'n_cubes': [10,10]},\n",
     "               {'Name': 'top', 'fp_arr': top_arr, 'lens': pca_lens(top_arr, plot=False),\n",
     "                'cluster_params': {'eps': 0.20, 'min_samples': 2}, 'n_cubes': [10,10]}]"
    ]
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -462,7 +462,26 @@
       "KeplerMapper()\n",
       "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
       "\n",
-      "Creating 100 hypercubes.\n"
+      "Creating 100 hypercubes.\n",
+      "\n",
+      "Created 445 edges and 154 nodes in 0:02:33.471749.\n",
+      "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/ECFP_network.html\n",
+      "FCFP [10, 10] 0.4 2\n",
+      "KeplerMapper()\n",
+      "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
+      "\n",
+      "Creating 100 hypercubes.\n",
+      "\n",
+      "Created 2902 edges and 1747 nodes in 0:02:26.577818.\n",
+      "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/FCFP_network.html\n",
+      "top [10, 10] 0.2 2\n",
+      "KeplerMapper()\n",
+      "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
+      "\n",
+      "Creating 100 hypercubes.\n",
+      "\n",
+      "Created 1509 edges and 938 nodes in 0:02:16.601421.\n",
+      "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/top_network.html\n"
      ]
     }
    ],
