--- a/notebooks/ECFP-FCFP-top_comparison.ipynb
+++ b/notebooks/ECFP-FCFP-top_comparison.ipynb
@@ -424,18 +424,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "hyperparams = [{'Name': 'ECFP', 'fp_arr': ECFP_arr, 'lens': pca_lens(ECFP_arr, plot=False), \n",
-    "                'cluster_params': {'eps': 0.65, 'min_samples': 4}, 'n_cubes': [10,10]},\n",
+    "                'cluster_params': {'eps': 0.65, 'min_samples': 4}, 'n_cubes': [30,30]},\n",
     "               {'Name': 'FCFP', 'fp_arr': FCFP_arr, 'lens': pca_lens(FCFP_arr, plot=False), \n",
-    "                'cluster_params': {'eps': 0.40, 'min_samples': 2}, 'n_cubes': [10,10]},\n",
+    "                'cluster_params': {'eps': 0.45, 'min_samples': 2}, 'n_cubes': [30,5]},\n",
     "               {'Name': 'top', 'fp_arr': top_arr, 'lens': pca_lens(top_arr, plot=False),\n",
-    "                'cluster_params': {'eps': 0.20, 'min_samples': 2}, 'n_cubes': [10,10]}]"
+    "                'cluster_params': {'eps': 0.25, 'min_samples': 2}, 'n_cubes': [10,10]}]"
    ]
   },
   {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -458,30 +458,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ECFP [10, 10] 0.65 4\n",
+      "ECFP [30, 30] 0.65 4\n",
+      "KeplerMapper()\n",
+      "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
+      "\n",
+      "Creating 900 hypercubes.\n",
+      "\n",
+      "Created 3561 edges and 1351 nodes in 0:00:23.209337.\n",
+      "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/ECFP_network_nRing.html\n",
+      "FCFP [30, 5] 0.45 2\n",
+      "KeplerMapper()\n",
+      "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
+      "\n",
+      "Creating 150 hypercubes.\n",
+      "\n",
+      "Created 2459 edges and 1407 nodes in 0:01:39.656462.\n",
+      "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/FCFP_network_nRing.html\n",
+      "top [10, 10] 0.25 2\n",
       "KeplerMapper()\n",
       "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
       "\n",
       "Creating 100 hypercubes.\n",
       "\n",
-      "Created 445 edges and 154 nodes in 0:02:33.471749.\n",
-      "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/ECFP_network.html\n",
-      "FCFP [10, 10] 0.4 2\n",
-      "KeplerMapper()\n",
-      "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
-      "\n",
-      "Creating 100 hypercubes.\n",
-      "\n",
-      "Created 2902 edges and 1747 nodes in 0:02:26.577818.\n",
-      "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/FCFP_network.html\n",
-      "top [10, 10] 0.2 2\n",
-      "KeplerMapper()\n",
-      "Mapping on data shaped (37660, 512) using lens shaped (37660, 2)\n",
-      "\n",
-      "Creating 100 hypercubes.\n",
-      "\n",
-      "Created 1509 edges and 938 nodes in 0:02:16.601421.\n",
-      "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/top_network.html\n"
+      "Created 687 edges and 329 nodes in 0:02:13.348307.\n",
+      "Wrote visualization to: ./networks/ZINC-FL_space/fingerprint_spaces/top_network_nRing.html\n"
      ]
     }
    ],
@@ -521,10 +521,18 @@
     "                         cover=cover,\n",
     "                         precomputed=False)\n",
     "    ### VISUALISATION\n",
+    "    \n",
+    "    _ = mapper.visualize(network,\n",
+    "                     title='ZINC.FL: %s fingerprint' % name,\n",
+    "                     color_function=desc_arr[:,2]>0,\n",
+    "                     path_html='./networks/ZINC-FL_space/fingerprint_spaces/%s_network_nAro.html' % name,\n",
+    "                     custom_tooltips = tooltips,\n",
+    "                     custom_meta={'Color': 'Presence of Aromatic Rings'})\n",
+    "    \n",
     "    _ = mapper.visualize(network,\n",
     "                     title='ZINC.FL: %s fingerprint' % name,\n",
     "                     color_function=desc_arr[:,1]>0,\n",
-    "                     path_html='./networks/ZINC-FL_space/fingerprint_spaces/%s_network.html' % name,\n",
+    "                     path_html='./networks/ZINC-FL_space/fingerprint_spaces/%s_network_nRing.html' % name,\n",
     "                     custom_tooltips = tooltips,\n",
     "                     custom_meta={'Color': 'Presence of Rings'})\n"
    ]
